hacker-news-y-combinator.css
/* ==========================================================
 *  Apply these styles everywhere. Mostly fonts and colours.
 */

*, body {
	font-family: "Helvetica Neue" !important;
	font-weight: 300;
	color: #222 !important;
	font-size: 11pt !important;
}

/* All hyperlinks get underlines on hover. */
a:hover, a:focus {
	text-decoration: underline;
}

/* Make the main table span the full page width and position:relative so we can absolutely position its children. */
body>center>table {
	background: white !important;
	position: relative;
	width: 100%;
}

/* Remove the page margin. Now the content fully fills the frame. */
body {
	margin: 0;
}

/* ==========================================================
 *  Orange masthead styles
 */

/* Applies a nice thick padding to the orange masthead table cells. */
table#hnmain>tbody>tr:first-child td table tr td {
	padding: 1em;
}

/* make "Hacker News" bigger and bolder and spaced out */
b.hnname a {
	font-size: 14pt !important;
	font-weight: 600;
	padding-right: 2em;
}

/* Hyperlinks in the masthead are white on hover/focus */
span.pagetop a:hover, span.pagetop a:focus {
	color: white !important;
}

/* Space out the masthead options. */
span.pagetop a {
	padding-right: 1em;
}

/* Making the text colour transparent hides the "|" which appear between the links in the masthead. <a> tags bring their own colours. */
span.pagetop {
	color: transparent !important;
}

/* Bring the login link over from the right hand side to the end of the masthead options. */
table#hnmain>tbody>tr:first-child td table {
	width: auto;
}
#hnmain > tbody > tr:nth-child(1) > td > table > tbody > tr > td:nth-child(3) {
	padding-left: 0;
	padding-top: 1.05em;
}
#hnmain > tbody > tr:nth-child(1) > td > table > tbody > tr > td:nth-child(3) span a {
	font-weight: 500;
}

/* ==========================================================
 *  News items styles
 */

/* Forces the item list table to span the width of its container so the stripes go all the way across the page. */
table.itemlist {
	width: 100%;
}

/* Force every table element apart from rows to display inline. This destroys the table structure, turning the output into basic text, but keeps the separation between rows. */
table.itemlist tr {
	display: block;
	position: relative;
}
table.itemlist tr * {
	display: inline;
}

/* Hide the redundant nodes being used for spacing purposes. */
#pagespace, tr.spacer, tr.morespace {
	display: none !important;
}

/* All the hyperlinks in the itemlist should be blue on hover. */
table.itemlist a:hover, table.itemlist a:focus {
	color: #36f !important;
}
table.itemlist a:hover span.sitestr, table.itemlist a:focus span.sitestr {
	color: #36f !important;
	font-weight: 300;
}

/* The .athing rows contain the story details. Make them tall and padded so they look nice. And add stripes. */
table.itemlist tr.athing {
	height: 3em;
	padding: 0.5em;
}
table.itemlist tr.athing:nth-child(even) {
	background: #f8f8f8;
}

/* The .athings need position relative so we can absolutely position their children ... */
table.itemlist tr.athing {
	position: relative;
}

/* ==========================================================
 *  Row numbers
 */

/* First child is the item number, 1. 2. etc. */
table.itemlist tr.athing td:first-child {
	position: absolute;
	left: 1.5em;
	top: 0.6em;
	width: 3.6em;
	text-align: center;
}
span.rank {
	font-weight: 100;
	font-size: 24pt !important;
	color: #aaa !important;
}

/* ==========================================================
 *  Voting arrows
 */

/* The above rules hide the voting arrows. This restores them. */
td.votelinks {
	position: absolute;
	left: 0.5em;
	top: 1.25em;
}
div.votearrow {
	display: block !important;
}

/* ==========================================================
 *  Story titles
 */

/* Absolutely position the title of each item. */
td.title {
	position: absolute;
	left: 5em;
	top: 0.6em;
}

/* Make the links to stories a bit bolder - but not too much - so they stand out. */
a.storylink {
	font-weight: 400;
}

/* Hide the parens around hostnames for the story links. This reduces the visual clutter a bit. */
span.sitebit {
	color: transparent !important;
}

/* Site names are also paler, lighter and slightly further away from link titles. */
span.sitebit a span.sitestr {
	padding-left: 0.5em;
	font-weight: 200;
	color: #777 !important;
}

/* ==========================================================
 *  Points, submitter, comments, etc.
 */

/* Move these up so they appear in the fat stripes provided by the .athing rows. */
td.subtext {
	position: absolute;
	top: -2em;
	left: 5em;
	color: #999 !important;
}

/* Colour tweaks to the text so users and comments links stand out (but not too much) */
td.subtext a, td.subtext span.age a {
	color: #999 !important;
}
td.subtext a.hnuser, td.subtext a:last-child {
	color: #444 !important;
}

/* And then CSS behooves us to restore the blue link to the colour. !importants upon !importants at this point. Ugh. */
td.subtext a:hover, td.subtext a:focus, td.subtext span.age a:hover, td.subtext span.age a:focus {
	color: #36f !important;
}

/* ==========================================================
 *  More link
 */

/* The "More" link for the next page is actually in the itemlist table. Make sure there's space for it at the bottom with a big height. Border for cosmetics. */
table.itemlist tbody tr:last-child {
	border: 1px solid #ddd;
	border-width: 1px 0;
	height: 3.75em;
}

/* Make the cell span the width and centre its text. */
table.itemlist tbody tr:last-child td.title {
	left: 0;
	top: 1.2em;
	text-align: center;
	width: 100%;
}

/* Make the "More" link blue. */
a.morelink {
	color: #36f !important;
}

/* ==========================================================
 *  Page footer styles
 */
 
 /* There's a lot of junk at the page footer and no easy way to identify it. It's all the last row of the principal table on the page and we can hide much of it. */
#hnmain > tbody > tr:last-child > td > * {
	display: none;
}

/* Restore the <center> containing the .yclinks span. That's what we're interested in. Move it down away from the itemlist table as well. */
#hnmain > tbody > tr:last-child > td > center {
	display: block;
	padding-top: 3em;
}

/* Use the transparent text trick to hide the | between the links in the footer. */
span.yclinks {
	color: transparent !important;
}

/* Make the footer links blue and space them out a little bit better. */
span.yclinks a {
	padding: 0.75em;
	color: #36f !important;
}

/* ==========================================================
 *  Search box styles
 */
 
/* Hack the search box from the very bottom to the very top of the page and hide its text. */
#hnmain > tbody > tr:last-child > td > center > form {
	position: absolute;
	top: 0.8em;
	right: 1em;
	color: transparent !important;
}

/* Make it look like a sleek modern rounded search box. */
#hnmain > tbody > tr:last-child > td > center > form > input {
	border-radius: 96px;
	border: 0;
	padding: 0.25em 1em;
	tabIndex: 0;
}

/* ==========================================================
 *  Comment page styles
 */
 
/* The front page styles above actually do considerable "damage" to this page so this first block of styles is to rectify that using the additional DOM elements that appear on comments. */
#hnmain .fatitem {
	position: relative;
	width: 100%;
}
#hnmain .fatitem .title {
	left: 2em;
}

/* All votelinks float at the top of the page. This restores the story vote button to next to the headline. */
#hnmain .fatitem td.votelinks {
	position: absolute;
}

/* Make the page headline BIG */
#hnmain .fatitem .storylink {
	font-size: 20pt !important;
}
#hnmain .fatitem a:hover,#hnmain .fatitem a:focus,#hnmain .fatitem a:hover span,#hnmain .fatitem a:focus span {
	color: #36f !important
}

/* Restore the subtext to underneath the headline. */
#hnmain .fatitem .subtext {
	position: initial;
	padding: 3em 0.5em 0 1.6em;
}

/* Re-position the comments textarea and make it wider */
#hnmain .fatitem form * {
	margin: 0 0 0 1.5em;
}
#hnmain .fatitem form textarea {
	width: 60%;
}

/* Make the "Add Comment" button a but more attractive */
#hnmain .fatitem form input[type=submit] {
	border: 3em;
	border-radius: 6px;
	text-transform: capitalize;
	padding: 0.5em 1em;
}

/* ==========================================================
 *  Styles for the comments themselves.
 */

/* Relatively position everything so that we can absolutely position other things! */
table.comment-tree * {
	position: relative;
}

/* Tweak the votelink icons back to the right place. */
table.comment-tree td.votelinks {
	left: 0em;
	top: 0.25em;
}

/* Unimposing underline on author and date. */
table.comment-tree span.comhead {
	border-bottom: 1px solid #ccc;
}

/* Display the comment author users in dark and bold. */
table.comment-tree a.hnuser {
	color: #444 !important;
	font-weight: 400;
	padding-right: 0.5em;
}

/* Make the comment datestamp a bit paler and restore its hyperlink blue. */
table.comment-tree span.age a {
	color: #999 !important;
	padding-right: 0.5em;
}

div.comment {
	line-height: 18pt;
}

/* italic text in comments is probably quotes so de-emphasise them a bit. */
table.comment-tree i {
	color: #999 !important;
}

/* Restore proper hyperlink blues and hover/focus states. */
span.commtext a, div.reply a, u {
	color: #36f !important;
	text-decoration: none !important;
}
span.commtext a:hover, span.commtext a:focus, div.reply a:hover, div.reply a:focus {
	text-decoration: underline !important;
}
table.comment-tree a:hover, table.comment-tree a:focus, table.comment-tree span.age a:hover, table.comment-tree span.age a:focus {
	color: #36f !important;
}

